--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Marrón Sena | CDMC</title>
+    <title>Marrón Sena </title>
     <meta name="descripcion" content="Sena Cento de diseño y manofactura del cuero">
     <meta name="autor" content="Juan Mejia">
     <link rel="shortcut icon" href="img/sombrero.png" type="image/x-icon">
@@ -56,7 +56,7 @@
                     <!-- <li><a href="#team" class="page-scroll">Diseñadores</a></li> -->
                     <li><a href="registrarvista.php" class="page-scroll">regístrarme</a></li>
                     <li><a href="loginvista.php" class="page-scroll">Iniciar sesión</a></li>
-                    
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
