--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Marrón Sena </title>
+    <title>Marrón Sena Cuero</title>
     <meta name="descripcion" content="Sena Cento de diseño y manofactura del cuero">
     <meta name="autor" content="Juan Mejia">
     <link rel="shortcut icon" href="img/sombrero.png" type="image/x-icon">
